# STM32-WB55RG_BLE_Custom

./: .mxproject  .project  CMakeLists.txt  STM32-WB55RG_BLE_Custom.ioc  stm32wb55xx_flash_cm4.ld  toolchain-arm-gcc.cmake
Core/Inc/: app_conf.h  app_entry.h  main.h  stm32_lpm_if.h  stm32wbxx_hal_conf.h  stm32wbxx_it.h
Core/Src/: app_entry.c  gpio.c  ipcc.c  main.c  rtc.c  stm32wbxx_hal_msp.c  stm32wbxx_it.c  usart.c
Drivers/BSP/P-NUCLEO-WB55.Nucleo/: stm32wbxx_nucleo.h
STM32_WPAN/App/: app_ble.c  app_ble.h  custom_app.c  custom_app.h  custom_stm.c  custom_stm.h
cmake/: gcc-arm-none-eabi.cmake
cmake/stm32cubemx/: CMakeLists.txt
